fixed p tag overflow break words, made blog post form responsive

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -27,7 +27,6 @@ body {
 
 p {
 	font-size: 1.1rem;
-	word-break: break-all;
 	white-space: normal;
 }
 
